--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1236,7 +1236,7 @@
             height: 90%;
             width: 100%;
             border-bottom: 2px solid white;
-            padding-bottom: 150px;
+            padding-bottom: 75px;
             padding-top: 30px;
             position: relative;
         }
@@ -1260,14 +1260,13 @@
         .unleashMain {
             display: flex;
             flex-direction: column;
-            gap: 85px;
+            gap: 50px;
         }
         .unleashMainFirst {
             display: flex;
             align-items: center;
             gap: 0px;
             position: relative;
-            border: 1px solid red;
         }
         .unleashImgOne {
             width: 212px;
@@ -1289,12 +1288,17 @@
             color: #FFFFFF;
             z-index: 100000;
             background-color: transparent;
+            position: absolute;
+            top: 164px;
         }
         .unleashTEXT span:nth-child(1) {
-            padding-left: 20px;
+            padding-left: 125px;
+            background-color: transparent;
         }
         .unleashTEXT span:nth-child(2) {
-            padding-left: 170px;
+            padding-left: 65px;
+            height: 89px;
+            background-color: transparent;
         }
         .unleashTEXT span:nth-child(3) {
             background-color: transparent;
@@ -1303,25 +1307,30 @@
             height: 100%;
             display: flex;
             width: 100%;
-            justify-content: space-between;
+            flex-direction: column-reverse;
         }
         .unleashImgTwoContainer {
             display: flex;
-            padding-left: 70px;
-            width: 45%;
+            padding-left: 0px;
+            width: 100%;
             justify-content: space-between;
         }
         .unleashImgTwo {
             display: flex;
-            align-items: end;
+            align-items: unset;
             position: relative;
+            padding-top: 30px;
+        }
+        .unleashImgTwo img {
+            width: 124px;
+            height: 175px;
         }
         .unleashImgTwo p {
             position: absolute;
-            width: 203px;
-            height: 32px;
-            bottom: 70px;
-            right: -155px;
+            top: 70px;
+            right: -115px;
+            width: 156px;
+            height: 48px;
             font-family: 'Manrope';
             font-style: normal;
             font-weight: 400;
@@ -1330,19 +1339,22 @@
             color: #FFFFFF;
             background-color: transparent;
         }
+        .unleashShopContainer {
+            display: flex;
+            flex-direction: column;
+            justify-content: end;
+        }
         .unleashShopContainer p {
-            text-align: center;
             font-family: 'Manrope';
             font-style: normal;
             font-weight: 400;
-            font-size: 30px;
-            line-height: 41px;
-            /* identical to box height */
-            color: #FFFFFF;
+            font-size: 20px;
+            line-height: 27px;
+            background-color: transparent;
         }
         .unleashShop {
-            height: 95px;
-            width: 95px;
+            height: 45px;
+            width: 45px;
             border: 2px solid #fff;
             display: grid;
             place-content: center;
@@ -1352,6 +1364,10 @@
             -ms-border-radius: 50%;
             -o-border-radius: 50%;
             font-size: 50px;
+        }
+        .BsArrow {
+            height: 25px;
+            background-color: transparent;
         }
         .unleashShop span {
             background-color: transparent;
@@ -1385,12 +1401,16 @@
                 -o-transform: translate(8px, -8px);
             }
         }
+        .unleashImgThree {
+            width: 100%;
+            height: 569px;
+        }
         .unleashImgThree img {
-            position: absolute;
-            right: 70px;
-            bottom: 30px;
+            position: unset;
             z-index: 0;
             cursor: pointer;
+            width: 100%;
+            height: 569px;
         }
     }
     /* CSS rules for screens with a minimum width of 601 pixels */
@@ -1408,6 +1428,17 @@
         .newCollectionSideText span {
             display: none;
         }
+        .unleashImgTwo img {
+            width: 264px;
+            height: 371px;
+        }
+        .unleashImgThree img {
+            position: unset;
+            z-index: 0;
+            cursor: pointer;
+            width: 508px;
+            height: 730px;
+        }
     }
     /* CSS rules for screens with a minimum width of 1201 pixels */
     
@@ -1418,5 +1449,16 @@
         }
         .newCollectionSideText span {
             display: none;
+        }
+        .unleashImgTwo img {
+            width: 264px;
+            height: 371px;
+        }
+        .unleashImgThree img {
+            position: unset;
+            z-index: 0;
+            cursor: pointer;
+            width: 508px;
+            height: 730px;
         }
     }
